# Indra-cli

./: .env.example  .gitignore  API cli.txt  API frontend.md  Install-ckart.ps1  Install-ckart.sh  USER_INSTALLATION.md  demo-client.conf  main.py  new-client.conf  pyproject.toml  readme.md  requirements.txt  setup.py  setup_backup.py
ckart/: banner.py  banner.txt  env.py  main.py  output.py  utils.py
ckart/commands/: auth.py  connect.py  create.py  disconnect.py  heartbeat.py  providers.py  ps.py  rm.py  start_stop.py  tunnel.py  vms.py  wg_setup.py
commands/: ps.py
indra/: custom_helper.py  env.py  main.py
indra/commands/: auth.py  connect.py  connection.py  create.py  disconnect.py  heartbeat.py  new.py  providers.py  ps.py  rm.py  start_stop.py  windows_wg.py
indra_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: Install-Indra.ps1  Install-ckart.ps1  wireguard_example.py
tests/commands/: test_auth.py  test_connect.py  test_create.py  test_disconnect.py  test_heartbeat.py  test_providers.py  test_ps.py  test_rm.py  test_start_stop.py  test_tunnel.py
