[project]
name = "indra-cli"
version = "0.1"
description = "Indra CLI to manage VMs"
authors = [
    { name = "Project Indra", email = "hetarth.jain@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests",
    "python-dotenv",
    "tabulate",
    "pynacl",
    "psutil"
]

[project.scripts]
indra = "indra.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
